array.island.Island.scala.error
Compilation error:
Island:5: error: identifier expected but integer literal found.
    if (num[k]>num[k-1]){
                     ^Island:9: error: ']' expected but '}' found.
  }
  ^